GNOME Bugzilla – Bug 721045
The accessible role of GtkColorSwatch should not be ATK_ROLE_UNKNOWN
Last modified: 2014-01-04 23:53:09 UTC
$ python3 >>> from gi.repository import Gtk >>> chooser = Gtk.ColorChooserWidget() >>> box = chooser.get_children()[0] >>> grid = box.get_children()[0] >>> swatch = grid.get_children()[0] >>> acc = swatch.get_accessible() >>> acc.get_description() 'Dark Aluminum 2' >>> acc.get_role() <enum ATK_ROLE_UNKNOWN of type AtkRole> As for what the role should be instead.... ATK doesn't have role specific for this particular type of widget. We could certainly add one if need be. Alternatively, since functionally this widget seems to behave like a radio button perhaps ATK_ROLE_RADIO_BUTTON could be used? Thoughts?
(In reply to comment #0) > As for what the role should be instead.... ATK doesn't have role specific for > this particular type of widget. We could certainly add one if need be. > Alternatively, since functionally this widget seems to behave like a radio > button perhaps ATK_ROLE_RADIO_BUTTON could be used? > > Thoughts? I agree with using ATK_ROLE_RADIO_BUTTON. Any other option would be define a new role just for that widget, and that sounds like an overkill to me.